Fix ticket #8858.

- When an Identify/Force Identify request is made in Tracker, if the target
  is a link, resolve it to its destination first. Fixes #8858.
- Have mime_update.sh explicitly mimeset the welcome/user guide scripts.